<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".VoucherFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_detalles_operacion"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_check"
        android:layout_gravity="center"
        app:srcCompat="@drawable/check" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_pagaste"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        tools:text="El pago de S/.28 a Mateo Gonzales fue exitoso"
        />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_compartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_compartir"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_inicio"
            tools:ignore="ButtonStyle" />
    </TableRow>


</LinearLayout>